Fix issue where modal was not opening on iOS

--- a/assets/css/graduation.css
+++ b/assets/css/graduation.css
@@ -433,6 +433,7 @@ ul.majors li {
     margin: 0 auto !important;
     list-style: none;
     text-align: left;
+    cursor: pointer;
 }
 
 ul.majors li:hover {
